# image-analyzer

./: package-lock.json  package.json  tailwind.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src/components/: AdjustmentsPanel.svelte  AnalysisPanel.svelte  EmptyState.svelte  ImageCanvas.svelte  ToolNavigation.svelte  ToolPanel.svelte  ValueSimplification.svelte
src/lib/api/: imageApi.ts  types.ts
src/lib/stores/: imageStore.ts
src/lib/utils/: imageProcessing.ts  paintByNumbers.ts  palettes.ts  timing.ts
src/routes/: +page.svelte
